--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.1
   flutter_svg: ^1.0.3
+  flutter_sequence_animation: ^4.0.0-nullsafety
+  syncfusion_flutter_gauges: ^20.1.47
 
 
 dev_dependencies:
