--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_sequence_animation: ^4.0.0-nullsafety
   syncfusion_flutter_gauges: ^20.1.47
+  shared_preferences: ^2.0.12
+  sensors_plus: ^1.2.1
+  nepali_utils: ^3.0.3
 
 
 dev_dependencies:
@@ -67,6 +70,7 @@ flutter:
     - assets/images/
     - assets/animations/
     - assets/icons/
+    - assets/stepcounter/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
