--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fitden_homeworkout">
+    package="com.fitden.fitden">
    <application
-        android:label="fitden_homeworkout"
+        android:label="FitDen"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
