--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.6.1
+  get: 4.6.1
   flutter_svg: ^1.0.3
   flutter_sequence_animation: ^4.0.0-nullsafety
-  syncfusion_flutter_gauges: ^20.1.47
+  syncfusion_flutter_gauges: ^19.1.67
   shared_preferences: ^2.0.12
   sensors_plus: ^1.2.1
   nepali_utils: ^3.0.3
-
+  responsive_framework: ^0.1.7
+  syncfusion_flutter_charts: ^19.1.67
+  readmore: ^2.1.0
+  modal_bottom_sheet: ^2.0.1
+  flutter_tts: ^3.2.2
+  timer_count_down: ^2.2.1
+  change_app_package_name: ^1.0.0
 
 dev_dependencies:
   flutter_test:
