profile and auth data successfully get

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_tts: ^3.2.2
   timer_count_down: ^2.2.1
   change_app_package_name: ^1.0.0
+  firebase_auth:
+  cloud_firestore:
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
