--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,10 @@ dependencies:
   change_app_package_name: ^1.0.0
   firebase_auth:
   cloud_firestore:
+  firebase_storage:
   firebase_core:
+  image_picker: ^0.8.3+1
+  
 
 dev_dependencies:
   flutter_test:
