--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   firebase_storage:
   firebase_core:
   image_picker: ^0.8.3+1
+  animated_text_kit: ^4.2.1
+  flutter_spinkit: ^5.1.0
+  intl: ^0.17.0
   
 
 dev_dependencies:
